--- a/learnHTML.html
+++ b/learnHTML.html
@@ -44,7 +44,7 @@
     <a href="http://www.w3schools.com">This is a link</a>
     <h3>1.2.4. HTML Images</h3>
     <p class="example">Example:</p>
-    <img src="w3schools.jpg" width="104" height="142" />
+    <img src="d99c229aeffc11a248ed.jpg" width="104" height="142" />
     <h2>1.3 HTML Attributes</h2>
     <h3>1.3.1. HTML Attributes</h3>
     <p class="example">Example:</p>
