fix source code

--- a/lab1/ex2.html
+++ b/lab1/ex2.html
@@ -9,8 +9,8 @@
     <div style="text-align: center;">
         <table style="width: 80%;" class="border-bottom-none">
             <tr class="border-bottom-none">
-                <th class="border-bottom-none" style="vertical-align: top; text-align: left;">Phạm Đức Quý 20183816 <br />Computer Engineering</th>
-                <th class="border-bottom-none" style="text-align: center; vertical-align: top;"><img src="./d99c229aeffc11a248ed.jpg" alt="quyhot" style="width: auto; height: 100%"></th>
+                <th class="border-bottom-none" style="vertical-align: top; text-align: left; width: 70%">Phạm Đức Quý 20183816 <br />Computer Engineering</th>
+                <th class="border-bottom-none" style="text-align: center; vertical-align: top;"><img src="./d99c229aeffc11a248ed.jpg" alt="quyhot" style="width: 60%; height: 100%; margin: 20px"></th>
             </tr>
         </table>
         <table style="width: 80%;">
